--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
-//include ':core'
-//project(':core').projectDir = new File('../library/core/')
+include ':core'
+project(':core').projectDir = new File('../library/core/')
