--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
 docs/* linguist-documentation
-app/src/main/res/* linguist-vendored
-app/src/main/assets/* linguist-vendored
+*.html linguist-vendored
