--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/appName"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -18,7 +18,7 @@
 
         <activity
             android:name=".SplashScreen"
-            android:label="@string/appName"
+            android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@style/AppTheme.SplashScreen">
             <intent-filter>
@@ -31,7 +31,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/appName"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.MainActivity"/>
 
         <activity
