--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply from: 'develouz.gradle'
 
 android {
     signingConfigs {
@@ -33,6 +34,11 @@ android {
     }
 }
 
+project.ext {
+    encryptRaw = true
+    autoRefactor = true
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 	//api project(':core')
@@ -44,5 +50,3 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
-apply from: 'crypto.gradle'
