--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.devz.app">
-
-    <application
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning">
-
-        <activity
-            android:name=".PolicyBrowser"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
-        <activity
-            android:name=".SplashScreen"
-            android:label="@string/app_name"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/AppTheme.SplashScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.MainActivity"/>
-
-        <activity
-            android:name=".DictionaryDetail"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
-
-    </application>
-
+<?xml version="1.0" encoding="UTF-8"?><manifest package="com.devz.app">
+  <application xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:supportsRtl="true" android:label="@string/app_name" android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning" android:icon="@mipmap/ic_launcher" android:allowBackup="false" android:roundIcon="@mipmap/ic_launcher_round">
+    <activity android:name=".PolicyBrowser" android:configChanges="keyboardHidden|orientation|screenSize"/>
+    <activity android:label="@string/app_name" android:name=".SplashScreen" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@style/AppTheme.SplashScreen">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
+    <activity android:label="@string/app_name" android:name=".MainActivity" android:configChanges="keyboardHidden|orientation|screenSize" android:theme="@style/AppTheme.MainActivity"/>
+    <activity android:name=".DictionaryActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
+  </application>
 </manifest>
